# QRQ-ML-flagging

./: .gitignore  README.md  main.py  pyproject.toml
data/historic-data/: TPS-rank-diffs.xlsx
notebooks/: build-features.ipynb  data-wrangling.ipynb  feature-exploration.ipynb  pipeline-stage-1.ipynb
src/data/: build_features.py  gen_historic_data.R
tools/: .Rhistory  data_to_csv.R
